# monoetna

./: .babelrc  .gitignore  Dockerfile  Dockerfile.ruby34-test  Gemfile  Makefile  Makefile-mac  README.md  Release.makefile  Release.mk  _config.yml  analysis.py  attribute_actions_template.json  babel.config.js  config.ru  config.yml  config.yml.template  config.yml.test  coprojects_template_models_dna_seq_tree.csv  docker-compose.yml  errors.py  etl_tools.completion  etna-0.1.16.gem  etna-0.1.16b.gem  etna-0.1.20.gem  etna-0.1.22.gem  etna-0.1.23.gem  etna-0.1.24.gem  etna-0.1.26.gem  etna-0.1.29.gem  etna-0.1.30.gem  etna.completion  etna.gemspec  etna_app.completion  functions.py  helper.py  index.js  index.md  ipi_flojo_file.csv  ipi_template.csv  (+23 more)
archimedes/: .dockerignore  .eslintignore  .gitignore  Dockerfile  Gemfile  Makefile  README.md  docker-compose.yml  encoder.py  errors.py  function.py  function_library.py  functions_matrix.py  functions_query.py  functions_vector.py  helper.py  lex.py  matrix.py  parse.py  poetry.completion  pyproject.toml  request_handler.py  requirements.txt  scope.py  server.py  vector.py  vulcan.md
archimedes/archimedes/: checker.py  runner.py
archimedes/development/: link-etnapy  link-magby
archimedes/lib/: archimedes.rb  commands.rb
archimedes/lib/models/: rtemis.rb
archimedes/spec/: spec_helper.rb
archimedes/spec/archimedes/: archimedes_spec.rb
archimedes/tests/: helpers.py  test_archimedes.py  test_assignment.py  test_builtins.py  test_checker.py  test_functions.py  test_operations.py  test_plotters_utils.py  test_runner.py  test_server.py
db/: README.md
docker/rust-base/: Cargo.toml  Dockerfile  Makefile
metis-client/: Cargo.toml  Dockerfile  Makefile  docker-compose.yml
metis-client/.cargo/: config
metis-client/src/: etna.rs  etna_auth.rs  etna_client.rs  janus.rs  main.rs  metis.rs  pull.rs  worker.rs
(+3886 files in other folders)
