[tool.poetry]
name = "archimedes"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.5"
FlowCytometryTools = "^0.5.0"
pandas = "^1.2.1"
scikit-learn = "^0.24.1"
scipy = "^1.6.0"
pylint = "^2.6.0"
black = "^20.8b1"
docker = "^4.4.1"
dataclasses-json = "^0.5.2"
scanpy = "^1.7.0"
magby = {path = "../magby"}
plotly = "^4.14.3"
leidenalg = "^0.8.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
archimedes-checker = 'archimedes.checker:main'
archimedes-run = 'archimedes.runner:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
