[package]
name = "base-deps"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.18.2", features = ["full"] }
